event triggered rightly
