# gamification-impl/src/main/java/ch/heig/amt/gamification/entities/EventEntity.java
@@ -20,7 +20,7 @@ public class EventEntity implements Serializable {
     private String type;
 
     @Column
-    private int userId;
+    private String username;
 
     @Column
     private int points;
