# gamification-impl/src/main/java/ch/heig/amt/gamification/entities/RuleEntity.java
@@ -25,10 +25,10 @@ public class RuleEntity implements Serializable {
     private int points;
 
     @Column
-    private int eventId;
+    private String eventName;
 
     @Column
-    private int badgeId;
+    private String badgeName;
 
     @ManyToOne
     private ApplicationEntity applicationEntity;
